Change application icon

--- a/PasswordGenerator/PasswordGenerator.csproj
+++ b/PasswordGenerator/PasswordGenerator.csproj
@@ -111,8 +111,10 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\close.png" />
-    <Resource Include="Assets\iconapp.ico" />
     <Resource Include="Assets\minus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\iconapp.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
