Adding class RelayCommand

--- a/PasswordGenerator/PasswordGenerator.csproj
+++ b/PasswordGenerator/PasswordGenerator.csproj
@@ -66,6 +66,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Commands\CommandBase.cs" />
+    <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Models\Password.cs" />
     <Compile Include="ViewModels\GeneratorPasswordViewModel.cs" />
     <Compile Include="Views\GeneratorPassword.xaml.cs">
